# mdatp-diagnostic-parser

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  statistics.rs
