[package]
categories = ["command-line-utilities"]
description = "Parser for Microsoft Defender real-time protection statistics"
edition = "2021"
keywords = ["microsoft-defender"]
license-file = "LICENSE"
name = "mdatp-diagnostic-parser"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/mdatp-diagnostic-parser"
version = "0.1.0"

[lints.rust]
improper_ctypes = "allow"
improper_ctypes_definitions = "allow"

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
future_not_send = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap-stdin = "0.4.0"
comfy-table = "7.1.0"
itertools = "0.12.0"
psutil = { version = "3.3.0", default-features = false, features = ["process"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.5.1"
